--- a/AMO/lcls_amo86615.ipynb
+++ b/AMO/lcls_amo86615.ipynb
@@ -2,6 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       "if (code_show){\n",
+       "$('div.input').hide();\n",
+       "} else {\n",
+       "$('div.input').show();\n",
+       "}\n",
+       "code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
+       "</script>\n",
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"This documment is written in a Jupyter notebook and the code used to produce these analyses has been hidden for ease of reading.  \n",
+       "To make the code visiable click here\"></form>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    "if (code_show){\n",
+    "$('div.input').hide();\n",
+    "} else {\n",
+    "$('div.input').show();\n",
+    "}\n",
+    "code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"This documment is written in a Jupyter notebook and the code used to produce these analyses has been hidden for ease of reading.  \n",
+    "To make the code visiable click here\"></form>''')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false
